apps/base/ollama/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ollama
  labels:
    middle-earth-cluster.homelab/category: apps
    middle-earth-cluster.homelab/realm: ai
