apps/base/ollama/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  namespace: ollama
  labels:
    middle-earth-cluster.homelab/category: apps
    middle-earth-cluster.homelab/realm: ai
spec:
  parentRefs:
    - name: internal-gateway
      namespace: ingress-nginx
      sectionName: https
  hostnames:
    - chat.from-gondor.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openwebui-open-webui
          port: 80
